Creacion de la pagina web

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba</title>
+    <title>WikiDino</title>
 </head>
 <body>
-    <a href="https://imgur.com/LWAIOCg"><img src="https://i.imgur.com/LWAIOCg.jpg" title="source: imgur.com" /></a>
-    <h1>Prueba</h1>
-    <p>Prueba, prueba, prueba, prueba y prueba</p>
+    <h1>Este es la primera pagina web de Jonathan Rafael Bustos Treviño</h1>
+    <p>Tratara sobre dinosaurios</p>
+    <p>Los dinosaurios son un grupo de saurópsidos​​ que aparecieron
+         durante el período Triásico. Aunque el origen exacto y su diversificación 
+         temprana es tema de activa investigación, ​ el consenso 
+        científico actual sitúa su origen entre 231 y 243 millones de años atrás.​</p>
+    <a href="https://imgur.com/Woz7moP"><img src="https://i.imgur.com/Woz7moP.jpg" title="source: imgur.com" /></a>
     
 </body>
 </html>
